[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py39"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | scripts
)/
'''

[tool.yapf]
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
COALESCE_BRACKETS = true
COLUMN_LIMIT = 88
DEDENT_CLOSING_BRACKETS = true
EACH_DICT_ENTRY_ON_SEPARATE_LINE = true
NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = true
SPACES_BEFORE_COMMENT = 2
