[project]
name = "torusimaging"
authors = [
    {name = "Adrian Price-Whelan", email = "adrianmpw@gmail.com"},
]
description = "Implementation of methods related to Orbital Torus Imaging"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["astronomy", "dynamics"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.9",
    "astropy>=5.1",
    "pyyaml",
    "gala",
    "jax",
    "jaxlib",
    "jaxopt",
    "jax_cosmo"
]
dynamic = ["version"]

[project.urls]
Documentation = "TODO"
Repository = "https://github.com/adrn/TorusImaging.git"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.ruff]
line-length = 88
ignore = [
    "E203",
    "E226",
    "E402",
    "E741",
    "W503",
    "W504"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"test*.py" = ["F841"]
"docs/tutorials/*" = ["E703"]
