[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "torusimaging"
authors = [
    {name = "Adrian Price-Whelan", email = "adrianmpw@gmail.com"},
]
description = "Inferring the Galactic mass distribution with stellar labels"
readme = "README.md"
keywords = ["astronomy", "galactic dynamics", "dynamics"]
license.file = "LICENSE"
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "numpy>=1.20",
  "scipy>=1.9",
  "astropy>=5.1",
  "pyyaml",
  "gala",
  "jax",
  "jaxlib",
  "jaxopt",
  "jax_cosmo",
  "matplotlib",
  "blackjax"
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
  "pytest-astropy",
  "pyyaml",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "sphinx>=7.0",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "matplotlib",
  "scipy",
  "sphinx-automodapi",
  "pydata-sphinx-theme",
  "myst_nb"
]

[project.urls]
Homepage = "https://github.com/adrn/torusimaging"
"Bug Tracker" = "https://github.com/adrn/torusimaging/issues"
Discussions = "https://github.com/adrn/torusimaging/discussions"
Changelog = "https://github.com/adrn/torusimaging/releases"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/torusimaging/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:unclosed file:ResourceWarning",
  "ignore:unclosed <socket:ResourceWarning",
  "ignore:unclosed <ssl.SSLSocket:ResourceWarning",
  "ignore:negative parallaxes are converted:astropy.utils.exceptions.AstropyWarning",
  "ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning"  # waiting on upstream
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.coverage]
run.source = ["torusimaging"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "torusimaging.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "astropy.*",
  "numpy.*",
  "astroquery.*",
  "dustmaps.*",
  "jaxopt.*",
  "gala.*"
]
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"src/torusimaging/model_helpers.py" = ["PD008"]

[tool.pylint]
py-version = "3.10"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "W",
  "C",
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
]
