[metadata]
name = totoro
author = Adrian M. Price-Whelan
author_email = adrianmpw@gmail.com
description = Implementation of Orbital Torus Imaging
long_description = file: README.md
license = MIT
license_file = LICENSE
url = https://github.com/adrn/totoro
edit_on_github = False
github_project = adrn/totoro
python_requires = ">=3.7"

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    astropy
    matplotlib
    numpy
    scipy
    gala
    galpy
    pyia
setup_requires =
    setuptools_scm
    wheel

[options.package_data]
# * = *.c
# gala = extra_compile_macros.h, cconfig.pyx
# gala.coordinates.tests = *.txt, *.npy, SgrCoord_data

[options.extras_require]
all =
    h5py
test =
    %(all)s
    pytest
    pytest-astropy
# extra =
#     galpy
#     sympy
# docs =
#     %(all)s
#     numpydoc
#     IPython
#     nbsphinx
#     pydata_sphinx_theme
#     sphinx
#     sphinxcontrib-bibtex
#     sphinx-astrorefs
#     sphinx_automodapi
#     sphinx_astropy
#     rtds_action
#     cmastro
#     requests

[tool:pytest]
testpaths = "totoro" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
norecursedirs =
    docs/_*
doctest_norecursedirs =
    docs/_*

[flake8]
max-line-length = 80
per-file-ignores =
    # imported but unused
    __init__.py: F401, F403
    # local variable assigned but never used
    test*.py: F841
    helpers.py: F841
ignore =
    E402
    E226
    E741
    W504
    W503
exclude =
    conftest.py
    docs/conf.py
    setup.py
