[metadata]
name = torusimaging
version = attr: torusimaging.__version__
description = Implementation of methods related to Orbital Torus Imaging
long_description = file: README.rst, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.20
    astropy>=5.0
    pyyaml
    gala
    jax
    jaxlib
    jaxopt
    jax_cosmo

[tool.ruff]
line-length = 88
per-file-ignores =
    # imported but unused
    __init__.py: F401, F403
    # local variable assigned but never used
    test*.py: F841
    docs/tutorials/*: E703
ignore =
    E203
    E226
    E402
    E741
    W503
    W504

[black]
line-length = 88

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
